gce-nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
    - name: http
      port: 80
